manifests/deployment-playit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playit-agent
  labels:
    app: playit-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playit-agent
  template:
    metadata:
      labels:
        app: playit-agent
    spec:
      securityContext:
        runAsUser: 1000
      containers:
        - name: playit-agent
          image: ghcr.io/playit-cloud/playit-agent:0.17
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop: [ALL]
