manifests/ciliumnetworkpolicy-playit.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: playit-agent
spec:
  endpointSelector:
    matchLabels:
      app: playit-agent
  egress:
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # Allow outbound tunnel connection to playit.gg cloud (Control: 443/TCP, Data: 5500-5600/UDP)
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "5500"
              protocol: UDP
              endPort: 5600
            - port: "443"
              protocol: TCP
    # Allow access to minecraft-be server for forwarding (Internal UDP 19132)
    - toServices:
        - k8sService:
            serviceName: minecraft-be
            namespace: minecraft-be
      toPorts:
        - ports:
            - port: "19132"
              protocol: UDP
    # Allow forwarding directly to Minecraft server pods
    - toEndpoints:
        - matchLabels:
            app: minecraft-be
      toPorts:
        - ports:
            - port: "19132"
              protocol: UDP
